# mine_detection

./: CMakeLists.txt  package.xml
config/: turtlebot_marker.rviz
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  setup.sh
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
include/: move.h  obstacle.h  points_gen.h
launch/: gazebo.launch  gazebo_avoid.launch  path_detect_bot.launch  turtlebot.launch  turtlebot_avoid.launch  turtlesim_path.launch
msg/: Obstacle.msg
src/: Pose_reciever.cpp  avoid.cpp  clockwise_test.cpp  detection.cpp  dynamic_pathplanning.cpp  gazebo_odom.cpp  laser.cpp  move.cpp  paper_detection.cpp  paper_detection_test.cpp  paper_localisation.cpp  path_basis.cpp  points_gen.cpp  pose_reciever.cpp  test.cpp  test_pub.cpp
turtlebot_worlds/maps/: victors_room.yaml.pgm  victors_room.yaml.yaml
