<?xml version="1.0"?>
<package format="2">
  <name>mine_detection</name>
  <version>0.0.0</version>
  <description>The mine_detection package</description>

  <!-- Maintainers: -->
  <maintainer email="vrisag20@student.aau.dk">Victor Risager</maintainer>
  <maintainer email="jbla20@student.aau.dk">Jakob Bøgh Larsen</maintainer>
  <maintainer email="anie20@student.aau.dk">Alexander Foergaard Nielsen</maintainer>
  <!-- osv osv -->

  <license>MIT</license>

  <!-- online repository -->
  <url type="repository">https://github.com/ToRexZ/mine_detection</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
